--- a/HKUser/css/list.css
+++ b/HKUser/css/list.css
@@ -3,25 +3,23 @@ gene-content-money.gene-content {
 }
 
 .gene-content dl {
-	width: 46%;
-	display: inline-block;
 	background-color: #FFFFFF;
 	padding: 0;
 	border-radius: 5px;
-	margin: 0 2% 10px;
+    margin: 0 3px 5px;
 }
 
 .gene-content dl dt img {
 	width: 100%;
-	height: 100px;
-	padding:5px
+	padding:5px;
 }
 
 .gene-content dl dd {
 	margin: 0;
 	padding: 0;
 	font-size: 16px;
-	padding: 0 10px 5px
+	padding: 0 10px 5px;
+	    text-align: justify;
 }
 
 .gene-content dl dd .gene-content-title {
