--- a/HKUser/css/main/index.css
+++ b/HKUser/css/main/index.css
@@ -14,10 +14,10 @@ header {
 }
 
 .search {
-	width: 70%;
+	width: 80%;
 	height: 30px;
 	margin-top: 7px;
-	margin-left: 5px;
+    margin-left: -3px;
 	border: 0;
 	border-radius: 20px;
 	background-color: #FFFFFF;
@@ -42,7 +42,7 @@ header {
 }
 
 .info-icon {
-	width: 25%;
+	width: 20%;
 	height: 30px;
 	border: 0;
 	display: inline-block
@@ -75,83 +75,6 @@ header {
 	padding-left: 10px;
 	list-style: none
 }
-
-.choice-area {
-	text-align: center;
-	width: 100%;
-	height: 160px;
-	overflow: hidden;
-	font-size: 14px;
-	/*padding: 1px 5px*/
-}
-
-.choice-area-top {
-	height: 80px;
-	width: 100%;
-	overflow: hidden
-}
-
-.choice-area-bottom {
-	height: 80px;
-	width: 100%;
-	overflow: hidden;
-	margin-top: 5px
-}
-
-.hospital {
-	/*border-radius: 5px;*/
-	width: 50%;
-	height: 80px;
-	color: #23A2EE;
-	padding-top: 15px;
-	/*padding-left: 5px;*/
-	background: url("../../images/part-hospital.png") no-repeat;
-	background-size: 100% 100%;
-	/*display: inline-block*/
-}
-
-.medical {
-	/*border-radius: 5px;*/
-	width: 50%;
-	height: 80px;
-	color: #F7A010;
-	padding-top: 15px;
-	/*padding-left: 5px;*/
-	background: url("../../images/medicine.png") no-repeat;
-	background-size: 100% 100%;
-	/*display: inline-block*/
-	    float: right;
-    position: relative;
-    bottom: 80px;
-}
-
-.check {
-	width: 50%;
-	height: 80px;
-	color: #51D5DD;
-	padding-top: 15px;
-	/*padding-left: 5px;*/
-	background: url("../../images/part-check.png") no-repeat;
-	background-size: 100% 100%;
-	/*display: inline-block;*/
-	/*border-radius: 5px*/
-}
-
-.vaccine {
-	/*border-radius: 5px;*/
-	width: 50%;
-	height: 80px;
-	color: #69B527;
-	padding-top: 15px;
-	/*padding-left: 5px;*/
-	background: url("../../images/part-vaccine.png") no-repeat;
-	background-size: 100% 100%;
-	/*display: inline-block*/
-	    float: right;
-    position: relative;
-    bottom: 80px;
-}
-
 .tuijian {
 	width: 100%;
 	height: 45px;
@@ -224,7 +147,7 @@ header {
 	display: none
 }
 
-.mui-table-view-cell img {
+#message-list .mui-table-view-cell img {
 	width: 100px !important
 }
 
@@ -251,16 +174,16 @@ header {
 .icon_index_doctors {
 	content: url("../../img/icon_index_doctors.png");
 	width: 20px;
-    position: relative;
-    top: 5px;
+	position: relative;
+	top: 5px;
 }
 
 .icon_index_info {
 	content: url("../../img/icon_index_info.png");
 	width: 20px;
-    position: relative;
-    top: 7px;
-    height: 25px;
+	position: relative;
+	top: 7px;
+	height: 25px;
 }
 
 .icon_more {
@@ -302,4 +225,27 @@ header {
 	width: 80px;
 	height: 80px;
 	border-radius: 80px
+}
+
+.mui-grid-view.mui-grid-9 .mui-table-view-cell {
+	padding: 2px 0;
+}
+
+.mui-grid-view.mui-grid-9 .mui-table-view-cell {
+	border-right: 0;
+	border-bottom: 0;
+}
+
+.mui-grid-view.mui-grid-9 {
+	padding: 13px 10px;
+	border-top: 0;
+	background-color: #fff;
+}
+
+.mui-table-view.mui-grid-view .mui-table-view-cell .mui-media-body {
+	font-size: 14px;
+}
+
+.icon-img {
+	width: 60px !important;
 }
