增加图形验证码
增加图形验证码

--- a/HKUser/css/doctor/doctor_detail.css
+++ b/HKUser/css/doctor/doctor_detail.css
@@ -151,7 +151,7 @@ header {
 	background-color: #FFFFFF
 }
 
-.mui-action-back {
+.mui-action-back ,.main-font-color, header .mui-icon.mui-icon-left-nav{
 	color: #FFFFFF !important
 }
 
